<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:id="@+id/registration"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:nestedScrollingEnabled="false"
        android:isScrollContainer="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_scrollFlags="scroll|enterAlways"
        >

        <LinearLayout
            android:id="@+id/signup"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_alignParentTop="true"
                android:id="@+id/login_heading"
                android:background="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp">


            <LinearLayout
                android:id="@+id/card_signin_with_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onClickFacebookButton"
                android:padding="20dp"
                android:layout_gravity="center"
                android:layout_below="@+id/orlayout"
                >

                <ImageView
                    android:id="@+id/ic_facebook_img"
                    android:layout_width="25dp"
                    android:layout_marginRight="13dp"
                    android:layout_height="25dp"
                    android:src="@drawable/fb_icon" />

                <TextView
                    android:id="@+id/txt_sign_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="33dp"
                    android:layout_toRightOf="@id/ic_facebook_img"
                    android:text="@string/Sign_in_with_Facebook"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />
                <com.facebook.login.widget.LoginButton
                    android:visibility="gone"
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    facebook:com_facebook_login_text="@string/Sign_in_with_Facebook"
                    android:background="@color/trans"
                    android:paddingTop="15dp"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/orlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                >

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/orText"
                    android:background="#c0c0c0" />

                <TextView
                    android:id="@+id/orText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="true"
                    android:text="or"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/orText"
                    android:background="#c0c0c0" />
            </RelativeLayout>

                <TextView
                    android:id="@+id/heading"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="15dp"
                    android:text="Sign Up and Start Learning!"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/WhiteSmoke" />

                <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/firstnameTL"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/LightGrey"
                android:theme="@style/textStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:textSize="18sp"
                    android:backgroundTint="@color/White"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textColor="@color/White"
                    />

            </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:visibility="gone"
                    android:textColorHint="@color/LightGrey"
                    android:theme="@style/textStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:visibility="gone"
                    android:textSize="18sp"
                    android:backgroundTint="@color/White"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textColor="@color/White"
                    />
                </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:textColorHint="@color/LightGrey"
                android:theme="@style/textStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_mob"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile no."
                    android:textSize="18sp"
                    android:backgroundTint="@color/White"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textColor="@color/White"
                    />

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:theme="@style/textStyle"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/LightGrey"
                app:passwordToggleTint="@color/WhiteSmoke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password (6+ characters)"
                    android:textSize="18sp"
                    android:backgroundTint="@color/White"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textColor="@color/White"


                    />

            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_below="@+id/cnf_passwordTL"
                android:id="@+id/forgetTxt_and_button_LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                >

                <Button
                    android:layout_alignParentRight="true"
                    android:id="@+id/create_Account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_log"
                    android:textColor="@color/WhiteSmoke"
                    android:text="@string/Create_an_account"
                    android:textAllCaps="false"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <LinearLayout
                    android:background="@drawable/btn_wishlist"
                    android:id="@+id/Pro_LL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:layout_marginRight="18dp"
                    >


                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/simpleProgressBar"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="35dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginBottom="11dp"
                        />

                </LinearLayout>
            </RelativeLayout>

            <!-- have an account and create account button layout-->

            <TextView
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="By signing up, you agree to our"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/White" />
            <LinearLayout
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                >
            <TextView
                android:id="@+id/txt_Terms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/Terms_of_Use"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/White" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:text="&amp;"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/White" />
            <TextView
                android:id="@+id/txt_privacy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/Privacy_Policy"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/White" />

        </LinearLayout>
                <RelativeLayout
                    android:id="@+id/orlayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="20dp"
                    >

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/orText2"
                        android:background="#c0c0c0" />

                    <TextView
                        android:id="@+id/orText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:textAllCaps="true"
                        android:text="or"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/orText2"
                        android:background="#c0c0c0" />
                </RelativeLayout>

            <LinearLayout
                android:id="@+id/Signin_txt"
                android:padding="20dp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/HaveAccountText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:text="Have an account?"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/White" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:text="@string/Sign_In"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/White" />

            </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
